--- a/css/portfolio_grid.css
+++ b/css/portfolio_grid.css
@@ -1,13 +1,16 @@
-.container {
+body {
   background-color: #c3cfe2;
-  padding: 20px 10px;
+}
+
+.container {
+  padding: 20px;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto;
       grid-template-columns: auto;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-  gap: 15px;
+  gap: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -23,10 +26,19 @@
 .container__item img {
   display: block;
   width: 100%;
-  border-radius: 5%;
+  border-radius: 8%;
 }
 
 .container__overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -35,26 +47,15 @@
   opacity: 0;
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
-  background-color: slategrey;
-  border-radius: 5%;
+  background-color: midnightblue;
+  border-radius: 8%;
 }
 
 .container__overlay:hover {
   opacity: 1;
 }
 
-.container__text {
-  font-size: 0.75em;
-  padding: 5px;
-  background-color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-@media only screen and (min-width: 250px) {
+@media only screen and (min-width: 480px) {
   .container {
     -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
@@ -63,7 +64,7 @@
   }
 }
 
-@media only screen and (min-width: 425px) {
+@media only screen and (min-width: 920px) {
   .container {
     -ms-grid-columns: auto auto auto;
         grid-template-columns: auto auto auto;
