--- a/css/portfolio_grid.scss
+++ b/css/portfolio_grid.scss
@@ -1,10 +1,13 @@
-.container {
+body {
   background-color: #c3cfe2;
-  padding: 20px 10px;
+}
+
+.container {
+  padding: 20px;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
-  gap: 15px;
+  gap: 20px;
   justify-content: center;
 
   &__item {
@@ -13,11 +16,14 @@
     img {
       display: block;
       width: 100%;
-      border-radius: 5%;
+      border-radius: 8%;
     }
   }
 
   &__overlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -25,33 +31,23 @@
     right: 0;
     opacity: 0;
     transition: 0.5s ease;
-    background-color: slategrey;
-    border-radius: 5%;
+    background-color: midnightblue;
+    border-radius: 8%;
   }
 
   &__overlay:hover {
     opacity: 1;
   }
-
-  &__text {
-    font-size: 0.75em;
-    padding: 5px;
-    background-color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
 }
 
-@media only screen and (min-width: 250px) {
+@media only screen and (min-width: 480px) {
   .container {
     grid-template-columns: auto auto;
     grid-template-rows: auto;
   }
 }
 
-@media only screen and (min-width: 425px) {
+@media only screen and (min-width: 920px) {
   .container {
     grid-template-columns: auto auto auto;
     grid-template-rows: auto;
